# escaper

./: CMakeLists.txt  README.md
include/: escaper.hpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
